--- a/build.gradle
+++ b/build.gradle
@@ -3,23 +3,44 @@ task wrapper(type: Wrapper) {
     distributionUrl = "https://github.com/10QueensRoad/gradle/releases/download/REL_${gradleVersion}-java8/gradle-${gradleVersion}-bin.zip"
 }
 
-// Apply the scala plugin to add support for Scala
+apply plugin: 'maven'
+
+group = 'org.fossbrain.green'
+version = '0.1.0-SNAPSHOT'
+
 apply plugin: 'scala'
 
-// In this section you declare where to find the dependencies of your project
 repositories {
-    // Use 'maven central' for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
     mavenCentral()
 }
 
-// In this section you declare the dependencies for your production and test code
 dependencies {
-    // We use Scala 2.11 in our library project
-    compile 'org.scala-lang:scala-library:2.11.1'
+    // this is an old version required since the new version
+    // does not play together nicley with sbt/zinc I assume.
+    // maybe we should try to upgrade this from time to time if
+    // new version support to take the latest version again
+    // maybe we should try to upgrade this from time to time if
+    compile 'org.scala-lang:scala-library:2.10.4'
+    compile 'org.scala-lang:scala-compiler:2.10.4'
 
-    // We use Scalatest for testing our library
+    // this one is part of the incremental compiler and needs
+    // to be removed by time with a working ant again
+    compile 'com.typesafe.zinc:zinc:0.3.5'
+
+    // testing libraries
     testCompile 'junit:junit:4.11'
-    testCompile 'org.scalatest:scalatest_2.11:2.1.7'
-    testRuntime 'org.scala-lang.modules:scala-xml_2.11:1.0.1'
+    testCompile 'org.scalatest:scalatest_2.10:2.1.7'
+    // testRuntime 'org.scala-lang.modules:scala-xml_2.11:1.0.1'
 }
+
+// uses the zinc version of the scala compiler instead of the ant one
+// since ant isn't compatible to java 8; is is incremental, but for CI
+// builds (since it is slower for non-incremental build) it's not
+// recommended by now. This needs to be reevaluated from time to time
+tasks.withType(ScalaCompile) {
+    scalaCompileOptions.useAnt = false
+}
+
+apply plugin: 'application'
+
+mainClassName = "Main"
