--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ sourceSets {
     }
 }
 
-task itest(type: Test) {
+task itest(type: Test, dependsOn: 'distZip') {
     testClassesDir = sourceSets.itest.output.classesDir
     classpath = sourceSets.itest.runtimeClasspath
 }
